# CoView

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
app_icons/: AppIcon.icns
docs/: API_USAGE.md  CODE_WIKI.md  COVIEW_FLOW.md  COVIEW_FLOW_SIMPLE.md  COVIEW_VOICE_FLOW.md  INTEGRATION_GUIDE.md  PERFORMANCE_ANALYSIS.md  ai-api-compatibility-requirements.md  火山引擎模型调用.md  项目完整说明.md
docs/en/: README.md  agent-protocol.md  architecture.md  development.md  product-overview.md  safety-contributing.md  setup-configuration.md  usage-cli-api.md  voice-interaction.md
docs/zh-CN/: README.md  agent-protocol.md  architecture.md  development.md  product-overview.md  safety-contributing.md  setup-configuration.md  usage-cli-api.md  voice-echo-cancellation-design.md  voice-echo-control-requirements.md  voice-interaction.md
docs/平台验收/: GUI自动化测试入口.md  Windows不支持清单.md  Windows手动回归清单.md  macOS手动回归清单.md  平台能力矩阵.md
examples/: api_example.py
packaging/macos/: CoView.spec
packaging/windows/: CoView.iss  CoView.spec
scripts/: build_macos_app.sh  build_windows_app.ps1  download_wake_word_model.py  run_gui_acceptance.py
src/baodou_ai/: __init__.py  __main__.py  api.py  cli.py  runtime_paths.py
src/baodou_ai/agent/: __init__.py  protocol.py  schemas.py  tool_executor.py  tool_registry.py
src/baodou_ai/ai/: __init__.py  client.py  companion_privacy.py  companion_recommender.py  memory.py  parser.py  prompt_builder.py  provider_adapter.py  provider_profiles.py  request_normalizer.py  response_normalizer.py  retry_policy.py  runtime_prompt_context.py  session_history.py
src/baodou_ai/code_agent/: __init__.py  dispatcher.py  manager.py  models.py  reporter.py  runtime.py  session_files.py  store.py
src/baodou_ai/core/: __init__.py  automation.py  config.py  context_window.py  coordinate.py  error_envelope.py  observation.py  process_report_policy.py  runner.py  runner_events.py  runner_metrics.py  runner_state.py  runner_turns.py  runtime_artifact_store.py  screenshot.py  settler.py  stall_policy.py  task_memory_store.py  tool_feedback.py  update_checker.py
src/baodou_ai/gui/: __init__.py  code_agent_window.py  control_console.py  control_console_jobs.py  frontmost_tracker.py  i18n.py  log_window.py  main_window.py  runtime_log.py  shortcut_config.py  styles.py
tests/: test_agent_protocol.py  test_ai_api_compatibility.py  test_automation.py  test_client.py  test_code_agent_manager.py  test_code_agent_tool_registry.py  test_companion_privacy.py  test_companion_suppression.py  test_config.py  test_download_wake_word_model.py  test_floating_window.py  test_log_window.py  test_memory.py  test_mouse_motion.py  test_parser.py  test_platform_common.py  test_platform_macos.py  test_platform_windows.py  test_runner.py  test_runner_code_agent_flow.py  test_runner_decoupled_components.py  test_runtime_artifact_store.py  test_screenshot.py  test_session_history.py  test_settler.py  test_task_memory_store.py  test_update_checker.py  test_voice_interaction.py  test_wake_word_engine.py
(+62 files in other folders)
